--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
       <figure>
         <img src="./Assets/Imgs/focaccia.png" alt="Focaccia Photo" />
 
-        <figcaption>Image credit</figcaption>
+        <figcaption>Image: Sally Vegas</figcaption>
       </figure>
 
       <section class="featured">
-        <span><strong>FEATURED IN:</strong></span>
+        <strong>FEATURED IN:</strong>
         <a class="link" href="#">Fresh Cranberry Recipes That Go Beyond Sauce</a>
       </section>
 
       <h3>Ingredients</h3>
 
-      <h4>For the focaccia:</h4>
+      <h4><b>For the focaccia:</b></h4>
       <ul>
         <li>4 cups all-purpose flour</li>
         <li>1 1/2 teaspoons instant yeast</li>
@@ -45,7 +45,7 @@
       <ul>
         <li>3 medium yellow onions, thinly sliced</li>
         <li>1 tablespoon balsamic vinegar</li>
-        <li>1–2 tablespoons olive oil</li>
+        <li>1-2 tablespoons olive oil</li>
         <li>10 ounces brie, cut into cubes</li>
         <li>1 1/2 cups fresh or frozen cranberries</li>
       </ul>
@@ -55,8 +55,12 @@
       <ol>
         <li>
           <h4>Make the focaccia dough</h4>
-          In a medium-sized mixing bowl, mix together all the dough ingredients…
-          <a href="#">Read more</a>
+          <p>
+            In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix togher all the dough ingredients until the flour is fully absorbed.
+            You don't need to actually knead the dough, though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the
+            flour...
+          </p>
+          <section>Read more on<a class="simplyrecipes" href="#">Simply recipes</a></section>
         </li>
       </ol>
     </main>
